<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:visibility="visible"
    tools:context=".WelcomeScreen"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/title"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungone700"
        android:text="@string/developers"
        android:textColor="@color/textBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <ImageView
        android:id="@+id/handshake"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/handshake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.747"
        app:srcCompat="@drawable/ic_handshake" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/back"
        android:textAppearance="@style/buttonTextStyle"
        android:textColor="@color/textBlack"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handshake" />

    <TextView
        android:id="@+id/fentus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:letterSpacing="0.02"
        android:text="@string/fentus"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/KinitoSs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:letterSpacing="0.02"
        android:text="@string/KinitoSs"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:letterSpacing="0.02"
        android:text="@string/group"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>