<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".DehydrationActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/title"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/appearanceCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        android:text="@string/appearance"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/eyesCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        android:text="@string/eyes"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/mucousCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        android:text="@string/mucous"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tearsCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        android:text="@string/tears"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />


</androidx.constraintlayout.widget.ConstraintLayout>