<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.dehydration.DehydrationFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/title"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/appearanceCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/appearance"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/eyesCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/eyes"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appearanceCard"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/mucousCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/mucous"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eyesCard"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tearsCard"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungone700"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/tears"
        android:textColor="@color/textBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mucousCard"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="RtlSymmetry" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="197dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/tearsCard"
        app:layout_constraintEnd_toEndOf="@+id/tearsCard"
        app:layout_constraintStart_toStartOf="@+id/tearsCard"
        app:layout_constraintTop_toTopOf="@+id/tearsCard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/calculate"
        android:textAppearance="@style/buttonTextStyle"
        android:textColor="@color/textBlack"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tearsCard"
        app:layout_constraintVertical_bias="0.389" />


</androidx.constraintlayout.widget.ConstraintLayout>