<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:visibility="visible"
    tools:context=".WelcomeScreen"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/title"
        android:textColor="@color/textBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/samsungone700"
        android:text="@string/welcome"
        android:textColor="@color/textBlack"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/possibilities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/handshake"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/handshake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/possibilities"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_handshake" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/card"
        android:fontFamily="@font/samsungsharpsansbold"
        android:text="@string/start"
        android:textAppearance="@style/buttonTextStyle"
        android:textColor="@color/textBlack"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handshake"
        app:layout_constraintVertical_bias="0.4" />

    <ListView
        android:id="@+id/possibilities"
        android:layout_width="340dp"
        android:layout_height="300dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>