<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/electrolitesFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentElectrolitesMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.electrolites.ElectrolitesFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectElement"
            android:fontFamily="@font/samsungone700"
            android:textColor="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14"/>

        <RadioGroup
            android:id="@+id/selectElement"
            android:layout_width="150dp"
            android:layout_height="143dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.051">

            <RadioButton
                android:id="@+id/radioButtonCalcium"
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:letterSpacing="0.02"
                android:paddingStart="10dp"
                android:text="@string/choiceCalcium"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radioButtonPotassium"
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:letterSpacing="0.02"
                android:paddingStart="10dp"
                android:text="@string/choicePotassium"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:id="@+id/radioButtonMagnesium"
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:letterSpacing="0.02"
                android:paddingStart="10dp"
                android:text="@string/choiceMagnesium"
                tools:ignore="RtlSymmetry" />

        </RadioGroup>

        <TextView
            android:id="@+id/inputAgeElectrolites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/samsungone700"
            android:text="@string/ageInput"
            android:textColor="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectElement"
            app:layout_constraintVertical_bias="0.145" />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.769"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499">

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/samsungone700"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:text="18"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText,LabelFor,RtlSymmetry" />

            <TextView
                android:id="@+id/minusButton"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/ageEditText"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/samsungone700"
                android:gravity="center"
                android:padding="8dp"
                android:text="-"
                android:textColor="@color/textBlack"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/plusButton"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/samsungone700"
                android:gravity="center"
                android:padding="8dp"
                android:text="+"
                android:textColor="@color/textBlack"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/electrolitesCalculate"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/card"
            android:fontFamily="@font/samsungsharpsansbold"
            android:text="@string/calculate"
            android:textAppearance="@style/buttonTextStyle"
            android:textColor="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAgeElectrolites"
            app:layout_constraintVertical_bias="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_electrolites_result"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:scrollbarSize="10dp"
        android:clipChildren="false"
        tools:context=".ui.electrolites.ElectrolitesFragment">

        <TextView
            android:id="@+id/electrolitesResultCard"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:background="@drawable/result_card"
            android:fontFamily="@font/samsungone700"
            android:gravity="center"
            android:text="@string/outputDehydration"
            android:textColor="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/electrolitesBack"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/card"
            android:fontFamily="@font/samsungsharpsansbold"
            android:text="@string/back"
            android:textAppearance="@style/buttonTextStyle"
            android:textColor="@color/textBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/electrolitesResultCard"
            app:layout_constraintVertical_bias="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>